tests/stage3/semantic_from_import_call_arg_count_missing.err
type error
line: 10
argument count mismatch
expected: 2
got: 1
