tests/stage3/semantic_from_import_call_arg_count_missing.imp
module app.main

from app.main import add as alias

function add(a: i32, b: i32) -> i32 {
    return a + b
}

function main() {
    print(alias(1))
}
